tests/ui/lifetimes/no_lending_iterators.stderr
error: associated type `Iterator::Item` is declared without lifetime parameters, so using a borrowed type for them requires that lifetime to come from the implemented type.
  --> $DIR/no_lending_iterators.rs:4:17
   |
LL |     type Item = &str;
   |                 ^
   |
note: you can't create an `Iterator` that borrows each `Item` from itself, but you can instead create a new type that borrows your existing type and implement `Iterator` for that new type.
  --> $DIR/no_lending_iterators.rs:3:19
   |
LL | impl Iterator for Data {
   |                   ^^^^

error: aborting due to 1 previous error

